[gd_scene load_steps=2 format=3 uid="uid://hotbar_ui"]

[ext_resource type="Script" path="res://src/ui/hotbar_ui.gd" id="1_hotbar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)

[node name="HotbarUI" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
script = ExtResource("1_hotbar")
slot_size = 64
slot_spacing = 4

[node name="HotbarPanel" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="HotbarPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SlotsContainer" type="HBoxContainer" parent="HotbarPanel/MarginContainer"]
layout_mode = 2
alignment = 1
